--- a/happy birtday.html
+++ b/happy birtday.html
@@ -13,9 +13,9 @@
     <script
       data-name="BMC-Widget"
       data-cfasync="false"
-      src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
-      data-id="er.robin"
-      data-description="Support me on Buy me a coffee!"
+      src="https://www.instagram.com/atieno7775"
+      data-id="er.Marylucy"
+      data-description="Support me in wishing sarafina a happy bithday"
       data-message=""
       data-color="#BD5FFF"
       data-position="Right"
